--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Temperature Converter</h1>
     <div id="container">
         <div class="input-div">
-            <label>Celcius</label><br>
+            <label>Celsius</label><br>
             <input type="Number" value="0" id="cel" class="inp">
         </div>
         <div class="input-div">
